# CG

./: Buffer A.txt  Buffer B.txt  Image.txt  README.md
Lab_01/: README.md
Lab_02/: A.txt  B.txt  C.txt  D.txt  Image.txt
Lab_03/: CMakeLists.txt  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  tgaimage.cpp
Lab_03/Include/: camera.h  our_gl.h
Lab_03/src/: camera.cpp  main.cpp  our_gl.cpp  tgaimage.cpp
Lab_04/: CMakeLists.txt  InputDevice.cpp  InputDevice.h  Window.cpp  Window.h  main.cpp
